# tennis-calendar-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ansible/: README.md  ansible.cfg  inventory.example.yml  playbook.yml
ansible/group_vars/tennis_servers/: vars.yml  vault.yml.example  zz-local.yml.example
ansible/templates/: clubs.toml.j2  env.j2
config/: clubs.example.toml
deploy/: Caddyfile.example  vps-management-handoff.example.json
docs/demo/: README.md  clubs.toml
scripts/: deploy_ansible.sh  deploy_vps.sh  parser_smoke_test.py  seed_demo_data.py  smoke_test.py
tennis_overview/: calendar.py  cli.py  config.py  db.py  models.py  server.py  sync.py  timeutils.py
tennis_overview/scrapers/: __init__.py  accusportview.py  base.py  browser.py  clubautomation.py  courtreserve.py
tests/: conftest.py  test_accusportview_parser.py  test_browser_login.py  test_calendar.py  test_clubautomation_parser.py  test_config.py  test_dashboard.py  test_db.py  test_sync.py
