[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-calendar-bridge"
version = "0.1.0"
description = "Private-first tennis schedule aggregator with iCalendar export."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Zongren Liu" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Scheduling",
]
dependencies = [
  "playwright>=1.44.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tennis-overview = "tennis_overview.cli:main"

[tool.setuptools.packages.find]
include = ["tennis_overview*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
